# Minimal

./: .clang-format  .gitignore  CMakeLists.txt  Changelog.md  README.md  Roadmap.md  makefile
.github/workflows/: test-build.yml
docs/: _config.yml  index.md
engine/: minimal.h
engine/include/: behaviour_component.h  behaviour_manager.h  component.h  component_manager.h  dynamic_array.h  engine_core.h  engine_core.hpp  entity.h  entity_container.h  entity_group.h  entity_manager.h  main_behaviour_manager.h  main_manager.h  manager.h  manager_interface.h  minimal.h  minimal.hpp  types.hpp
engine/include/components/: behaviour_component.h  behaviour_component.hpp  component.h  component.hpp  graphics2D_component.h  graphics2D_component.hpp  managed_component.h  managed_component.hpp  physics_component.h  physics_component.hpp  transform2D_component.h  transform2D_component.hpp
engine/include/containers/: entity_container.h  entity_container.hpp  resource_container.h  resource_container.hpp
engine/include/entities/: entity.h  entity.hpp  entity2D.h  entity2D.hpp
engine/include/managers/: behaviour_manager.h  behaviour_manager.hpp  component_manager.h  component_manager.hpp  graphics_manager.h  graphics_manager.hpp  main_behaviour_manager.h  main_behaviour_manager.hpp  manager.h  manager.hpp  physics_manager.h  physics_manager.hpp  unordered_component_manager.h  unordered_component_manager.hpp
engine/include/utils/: dynamic_array.h  dynamic_array.hpp  engine_core_dependency_injector.h  engine_core_dependency_injector.hpp  engine_core_dependent_injector.h  event.hpp  transform.hpp  transform2D.h  transform3D.h  transform_system2D.h  transform_system2D.hpp
engine/src/: behaviour_component.cpp  behaviour_manager.cpp  component.cpp  component_manager.cpp  engine_core.cpp  entity.cpp  entity_container.cpp  entity_group.cpp  entity_manager.cpp  main_behaviour_manager.cpp  main_manager.cpp  minimal.cpp
engine/src/components/: behaviour_component.cpp  component.cpp  graphics2D_component.cpp  physics_component.cpp  transform2D_components.cpp
game/: makefile
game/include/: custom_main_behaviour_manager.h  custom_main_behaviour_manager.hpp  main_behaviour_manager.h
game/src/: custom_main_behaviour_manager.cpp  main.cpp  main_behaviour_manager.cpp
readme/: README_ptbr.md
runtime-test/include/: blue_behavior.hpp  custom_main_behaviour_manager.hpp  green_behavior.hpp  red_behavior.hpp
runtime-test/src/: blue_behavior.cpp  custom_main_behaviour_manager.cpp  green_behavior.cpp  main.cpp  red_behavior.cpp
test/: engine_core_test.cpp
(+12 files in other folders)
